// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeUniversalApp asar mode should correctly merge two identical asars 1`] = `
{
  "Resources/app.asar": {
    "algorithm": "SHA256",
    "hash": "85fff474383bd8df11cd9c5784e8fcd1525af71ff140a8a882e1dc9d5b39fcbf",
  },
}
`;

exports[`makeUniversalApp asar mode should create a shim if asars are different between architectures 1`] = `
{
  "Resources/app-arm64.asar": {
    "algorithm": "SHA256",
    "hash": "71db54541357128943df64d54480a22d0cdf4c283f2044f48101fb1fc6e6fb2d",
  },
  "Resources/app-x64.asar": {
    "algorithm": "SHA256",
    "hash": "85fff474383bd8df11cd9c5784e8fcd1525af71ff140a8a882e1dc9d5b39fcbf",
  },
  "Resources/app.asar": {
    "algorithm": "SHA256",
    "hash": "b62aaaed07ff72dc33da1720d900e0443c060285ef374ce1bdaef1d4f28b5fe4",
  },
}
`;

exports[`makeUniversalApp asar mode should merge two different asars when \`mergeASARs\` is enabled 1`] = `
{
  "Resources/app.asar": {
    "algorithm": "SHA256",
    "hash": "71db54541357128943df64d54480a22d0cdf4c283f2044f48101fb1fc6e6fb2d",
  },
}
`;

exports[`makeUniversalApp force packages successfully if \`out\` bundle already exists and \`force\` is \`true\` 1`] = `
{
  "Resources/app.asar": {
    "algorithm": "SHA256",
    "hash": "85fff474383bd8df11cd9c5784e8fcd1525af71ff140a8a882e1dc9d5b39fcbf",
  },
}
`;

exports[`makeUniversalApp no asar mode should correctly merge two identical app folders 1`] = `{}`;

exports[`makeUniversalApp no asar mode should shim two different app folders 1`] = `{}`;
